force-app/main/default/objects/Official_Bid__c/Official_Bid__c.object-meta.xml
<CustomObject>
    <label>Official Bid</label>
    <nameField>
        <displayFormat>Bid-{0000}</displayFormat>
        <label>Official Bid Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Official Bids</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>