force-app/main/default/objects/Official_Bid__c/fields/Recommended_Bid__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Bid__c</fullName>
    <label>Recommended Bid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>