force-app/main/default/objects/Official_Bid__c/fields/Reponse_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Reponse_Deadline__c</fullName>
    <label>Player Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>