force-app/main/default/objects/Official_Bid__c/fields/Scout_Rating__c.field-meta.xml
<CustomField>
    <fullName>Scout_Rating__c</fullName>
    <label>Scout Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>*</fullName>
            </value>
            <value>
                <fullName>**</fullName>
            </value>
            <value>
                <fullName>***</fullName>
            </value>
            <value>
                <fullName>****</fullName>
            </value>
            <value>
                <fullName>*****</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>