force-app/main/default/objects/Official_Bid__c/fields/Team_Asking_Price__c.field-meta.xml
<CustomField>
    <fullName>Team_Asking_Price__c</fullName>
    <description>Price that selling team and/or agent is asking for player</description>
    <label>Asking Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>